# JapanOCR

./: .gitignore  Makefile  README.md
backend/: .env.example  README.md  main.py  pyproject.toml
backend/config/: database.py
backend/middleware/: entra_auth.py
backend/routes/: auth_routes.py  config_routes.py  dashboard_routes.py  invoice_routes.py  jobs_routes.py  logs_routes.py
backend/services/: azure_storage_client.py  docwise_client.py  file_metadata_client.py  jobs.py  logging_client.py
backend/tests/: test_app_checks.py  test_docwise_client.py  test_entra_auth.py  test_invoice_helpers.py  test_job_control.py  test_logging_client.py
docs/: README.md  api-reference.md  architecture.md  comment-standards.md  testing.md
frontend/: .env.example  .eslintrc.cjs  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  i18n.js  main.jsx  msalConfig.js
frontend/src/components/: Header.jsx  ImportantNotice.jsx  PrivateRoute.jsx
frontend/src/context/: ActiveJobContext.jsx  JobContext.jsx  LangContext.jsx  ModuleContext.jsx  UserContext.jsx
frontend/src/layouts/: MainLayout.jsx
frontend/src/pages/: BulkInvoiceUploadPage.jsx  ConfigPage.jsx  DashboardPage.jsx  InvoiceUploadPage.jsx  JobsPage.jsx  LoginPage.jsx  LogsPage.jsx
frontend/src/services/: api.js
